--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch==2.5.1
-numpy==2.0.2
-matplotlib==3.9.4
-datasets==3.2.0
-tiktoken==0.8.0
-tqdm==4.67.1
-transformers==4.48.1
+torch>=2.5.1
+numpy==1.26.4
+matplotlib>=3.9.4
+datasets>=3.2.0
+tiktoken>=0.8.0
+tqdm>=4.67.1
+transformers>=4.48.1
